--- a/cog.yaml
+++ b/cog.yaml
@@ -19,4 +19,4 @@ build:
     - pip install triton
   
 predict: "predict.py:Predictor"
-image: "kays111/runpod-test:latest"
+image: "kays111/test-runpod:latest"
