--- a/cog.yaml
+++ b/cog.yaml
@@ -10,7 +10,7 @@ build:
     - "transformers==4.25.1"
     - "accelerate==0.14.0"
     - "xformers==0.0.16"
-    - "runpod==0.9.0"
+    - "runpod"
     - "safetensors"
     - "Pillow"
   system_packages:
